c4prj2_input/grade.txt
Grading at Sun Dec  1 19:14:50 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:27:21: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘card’
   (fc->decks[index]).card[nw_n_cards-1] = ptr;
                     ^
future.c: In function ‘future_cards_from_deck’:
future.c:43:19: error: expected expression before ‘<’ token
   for(i=0; i < fc-<n_decks;i++){
                   ^
Compilation of future.c failed

Overall Grade: F
